deploy1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment
  labels:
    app: main-app
  namespace: ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      - name: main-app
        image: mostafakassas/appone
        ports:
        - containerPort: 3000
