service1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: ns1
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
